--- a/package.json
+++ b/package.json
@@ -8,7 +8,5 @@
   },
   "author": "Carlo Jeske",
   "license": "MIT",
-  "devDependencies": {
-    "jasmine": "^3.2.0"
-  }
+  "devDependencies": {}
 }
