--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "devDependencies": {
     "copy-webpack-plugin": "^4.5.4",
     "jasmine": "^3.3.0",
-    "jasmine-webpack-plugin": "^0.1.1",
+    "jasmine-core": "^3.3.0",
+    "jasmine-webpack-plugin": "git+ssh://git@github.com:plusgut/jasmine-webpack-plugin.git",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
